tests/bad/11/test.scm
(let* ((a b) (b 5)) a)